fixed setup page and fixed header being too big

--- a/site/assets/main.css
+++ b/site/assets/main.css
@@ -38,7 +38,6 @@ details[open] {
 header {
     border-bottom: 1px solid black;
     padding-left: 1rem;
-    width: 100%;
 }
 
 body > div {
